Force Jetty webapp to be deployed on the / context

--- a/pom.xml
+++ b/pom.xml
@@ -764,6 +764,9 @@
                             <value>${jetty.port}</value>
                         </systemProperty>
                     </systemProperties>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
                 </configuration>
             </plugin>
             <plugin>
