--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -10,8 +10,8 @@ tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 tatami.connection.security=${tatami.connection.security}
 
 #User configuration
-tatami.admin.users=${tatami.admin.users}
-tatami.ldapauth.domain=${tatami.ldapauth.domain}
+tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
+tatami.ldapauth.domain=ippon.fr
 tatami.ldapauth.url=${tatami.ldapauth.url}
 tatami.ldapauth.searchbase=${tatami.ldapauth.searchbase}
 tatami.ldapauth.searchfilter=${tatami.ldapauth.searchfilter}
