Created a new GZIPFilter, to exclude attached files from the filter

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 
     <filter>
         <filter-name>GzipFilter</filter-name>
-        <filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
+        <filter-class>fr.ippon.tatami.web.filter.TatamiGzipFilter</filter-class>
     </filter>
 
     <filter-mapping>
