--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.ippon.tatami</groupId>
     <artifactId>tatami</artifactId>
-    <version>2.0.0.beta.1</version>
+    <version>2.0.0.beta.2</version>
     <packaging>war</packaging>
 
     <description>Tatami is an enterprise micro-blogging platform</description>
@@ -51,7 +51,7 @@
                 <tatami.smtp.password></tatami.smtp.password>
                 <tatami.smtp.from>tatami@localhost</tatami.smtp.from>
                 <tatami.google.analytics.key></tatami.google.analytics.key>
-                <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
+                <tatami.wro4j.enabled>true</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>true</tatami.message.reloading.enabled>
                 <tatami.connection.security>any</tatami.connection.security>
                 <tatami.search.engine>lucene</tatami.search.engine>
