--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                 <log4j.loglevel>INFO</log4j.loglevel>
                 <ehcache.maxBytesLocalHeap>128M</ehcache.maxBytesLocalHeap>
                 <tatami.version>${project.version}</tatami.version>
-                <tatami.url>http://sandbox.tatamisoft.com/</tatami.url>
+                <tatami.url>http://sandbox.tatamisoft.com</tatami.url>
                 <tatami.ldapauth.url>ldap://directory:389</tatami.ldapauth.url>
                 <tatami.ldapauth.searchbase>dc=ippon,dc=fr</tatami.ldapauth.searchbase>
                 <tatami.ldapauth.searchfilter>(uid={0})</tatami.ldapauth.searchfilter>
