Stress test tuning & testing

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -8,6 +8,8 @@ tatami.google.analytics.key=${tatami.google.analytics.key}
 tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 # Spring Security channel security, see http://static.springsource.org/spring-security/site/docs/3.1.x/reference/ns-config.html#ns-requires-channel
 tatami.connection.security=${tatami.connection.security}
+# Automatically register users. WARNING : should only be set to true for testing the application
+tatami.automatic.registration=${tatami.automatic.registration}
 
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
