--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -24,6 +24,7 @@ smtp.port=${tatami.smtp.port}
 smtp.user=${tatami.smtp.user}
 smtp.password=${tatami.smtp.password}
 smtp.from=${tatami.smtp.from}
+smtp.tls=${tatami.smtp.tls}
 
 #Cassandra configuration
 cassandra.host=127.0.0.1:9160
