--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -11,6 +11,9 @@ tatami.connection.security=${tatami.connection.security}
 # Automatically register users. WARNING : should only be set to true for testing the application
 tatami.automatic.registration=${tatami.automatic.registration}
 
+#Monitoring using Yammer Metrics
+tatami.metrics.enabled=${tatami.metrics.enabled}
+
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
 tatami.ldapauth.domain=ippon.fr
