--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -13,6 +13,8 @@ tatami.automatic.registration=${tatami.automatic.registration}
 
 #Monitoring using Yammer Metrics
 tatami.metrics.enabled=${tatami.metrics.enabled}
+tatami.metrics.graphite.host=${tatami.metrics.graphite.host}
+tatami.metrics.graphite.port=${tatami.metrics.graphite.port}
 
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
