--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -48,6 +48,8 @@ cassandra.keyspace=tatami
 search.engine=${tatami.search.engine}
 
 # Elastic Search configuration
+elasticsearch.engine.mode=${tatami.elasticsearch.engine.mode}
+
 elasticsearch.indexName=tatami
 # Must be the same as the ES cluster.name variable (see elasticsearch.yml)
 elasticsearch.cluster.name=tatamiCluster
