--- a/src/main/resources/META-INF/elasticsearch/elasticsearch-embedded.yml
+++ b/src/main/resources/META-INF/elasticsearch/elasticsearch-embedded.yml
@@ -12,3 +12,5 @@ path:
   work: ${tatami.elasticsearch.path.data}/work
   logs: ${tatami.elasticsearch.path.log}
 
+http.enabled: ${tatami.elasticsearch.http.enabled}
+
